--- a/index.html
+++ b/index.html
@@ -2,124 +2,119 @@
 
 <html lang="en">
   <head>
-      <title>Restaurant Menu</title>
-      <meta charset="UTF-8" />
+    <title>Restaurant Menu</title>
+    <meta charset="UTF-8" />
   </head>
   <body>
     <header>
-        <nav>
-            <ul>
-              <li class="menu">
-                <a href='/index.html'>
-                  Home
-                </a>
-              </li>
-              <li class="menu">
-                <a href='/about.html'>
-                  About
-                </a>
-              </li>
-              <li class="menu">
-                <a href='/review.html'>
-                  Reviews
-                </a>
-              </li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li class="menu">
+            <a href="/index.html">
+              Home
+            </a>
+          </li>
+          <li class="menu">
+            <a href="/about.html">
+              About
+            </a>
+          </li>
+          <li class="menu">
+            <a href="/review.html">
+              Reviews
+            </a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <aside>
       <p>
         This is the sidebar!
       </p>
     </aside>
-    <h2> 
-      Welcome to our menu! 
+    <h2>
+      Welcome to our menu!
     </h2>
     <section>
       <table>
         <thead>
-            <tr>
-                <th>
-                  Food
-                </th>
-                <th>
-                  Description
-                </th>
-                <th>
-                  Price
-                </th>
-            </tr>
+          <tr>
+            <th>
+              Food
+            </th>
+            <th>
+              Description
+            </th>
+            <th>
+              Price
+            </th>
+          </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>
-                  Salad
-                </td>
-                <td>
-                  Fresh, delicious Cobb Salad
-                </td>
-                <td>
-                  $7.99
-                </td>
-            </tr>
-            <tr>
-                <td>
-                  Burger
-                </td>
-                <td>
-                  1/4 lb grass-fed burger with 
-                choice of cheese
-              </td> 
-                <td>
-                  $6.99
-                </td>
-            </tr>
-            <tr>
-                <td>
-                  Chicken Salad Sandwich
-                </td>
-                <td> 
-                  Our world famous chicken salad on a bagel with 
-                homemade pickles
-              </td>
-                <td>$8.99
-                
-                </td>
-            </tr>
-            <tr>
-                <td>
-                  Buffalo Chicken Sandwich
-                </td>
-                <td>
-                  Spicy fried chicken on a brioche bun
-                </td>
-                <td>
-                  $10.99
-                </td>
-            </tr>
-            <tr>
-                <td>
-                  Fries
-                </td>
-                <td>
-                  Hand cut potatoes lightly fried and seasoned
-                </td>
-                <td>
-                  $1.99
-                </td>
-            </tr>
-            <tr>
-                <td>
-                  Soda
-                </td>
-                <td>
-                  Regular,diet,
-                orange,or root beer    
-                </td>
-                <td>
-                  $1.00
-                </td>
-            </tr>
+          <tr>
+            <td>
+              Salad
+            </td>
+            <td>
+              Fresh, delicious Cobb Salad
+            </td>
+            <td>
+              $7.99
+            </td>
+          </tr>
+          <tr>
+            <td>
+              Burger
+            </td>
+            <td>
+              1/4 lb grass-fed burger with choice of cheese
+            </td>
+            <td>
+              $6.99
+            </td>
+          </tr>
+          <tr>
+            <td>
+              Chicken Salad Sandwich
+            </td>
+            <td>
+              Our world famous chicken salad on a bagel with homemade pickles
+            </td>
+            <td>$8.99</td>
+          </tr>
+          <tr>
+            <td>
+              Buffalo Chicken Sandwich
+            </td>
+            <td>
+              Spicy fried chicken on a brioche bun
+            </td>
+            <td>
+              $10.99
+            </td>
+          </tr>
+          <tr>
+            <td>
+              Fries
+            </td>
+            <td>
+              Hand cut potatoes lightly fried and seasoned
+            </td>
+            <td>
+              $1.99
+            </td>
+          </tr>
+          <tr>
+            <td>
+              Soda
+            </td>
+            <td>
+              Regular,diet, orange,or root beer
+            </td>
+            <td>
+              $1.00
+            </td>
+          </tr>
         </tbody>
       </table>
     </section>
@@ -133,31 +128,31 @@
           <span> We won't share this information </span>
 
           <div>
-            <label for="firstName"> First name : </label> 
-            <input type="text" id="firstName" class="formElement">
+            <label for="firstName"> First name : </label>
+            <input type="text" id="firstName" class="formElement" />
           </div>
           <div>
             <label for="lastName"> Last name : </label>
-            <input type="text" id="lastName" class="formElement">
+            <input type="text" id="lastName" class="formElement" />
           </div>
           <div>
             <label for="email"> Email : </label>
-            <input type="email" id="email" class="formElement">
+            <input type="email" id="email" class="formElement" />
           </div>
           <div>
             <label for="phoneNumber"> Phone number : </label>
-            <input type="tel" id="phoneNumber" class="formElement">
+            <input type="tel" id="phoneNumber" class="formElement" />
           </div>
           <div>
             <p>
               Rate us:
             </p>
             <select name="rate">
-                <option value="very_good">Very good</option>
-                <option value="good">Good</option>
-                <option value="okay">Okay</option>
-                <option value="not_good">Not Good</option>
-                <option value="bad">Bad</option>
+              <option value="very_good">Very good</option>
+              <option value="good">Good</option>
+              <option value="okay">Okay</option>
+              <option value="not_good">Not Good</option>
+              <option value="bad">Bad</option>
             </select>
           </div>
           <div>
@@ -172,11 +167,11 @@
             </p>
             <div>
               <label for="yesVisit"> Yes : </label>
-              <input type="radio" name="visit" id="yesVisit">
+              <input type="radio" name="visit" id="yesVisit" />
             </div>
             <div>
               <label for="noVisit"> No : </label>
-              <input type="radio" name="visit" id="noVisit">
+              <input type="radio" name="visit" id="noVisit" />
             </div>
           </div>
           <div>
@@ -193,7 +188,6 @@
     <footer>
       This is where any content in the footer would go
     </footer>
+    <button>Click</button>
   </body>
 </html>
-
- 
